# leqo-backend

./: .env.template  .gitignore  CONTEXT_SUMMARY.md  Dockerfile  README.md  alembic.ini  compose-dev.yaml  compose.yaml  docker-compose.yaml  extract-openapi.py  hello.py  mkdocs.yml  playground.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  docs.yml
app/: __init__.py  compile.py  config.py  db_migrations.py  exception_handlers.py  exceptions.py  hello.py  main.py  qasm_builder.py  qasm_processor.py  services.py  utils.py
app/converter/: __init__.py  qasm_converter.py
app/enricher/: __init__.py  controlled_u.py  db_enricher.py  delete_after_review.py  deutsch_jozsa.py  encode_value.py  engine.py  exceptions.py  gates.py  grover_algorithm.py  if_else.py  literals.py  mcmt_gate.py  measure.py  merger.py  models.py  music_feature.py  operations.py  operator.py  pass_node.py  prepare_state.py  qaoa.py  qft.py  qiskit_prepare.py  qpe.py  schmidt_decomposition.py  splitter.py  sql-alchemy-demo.py  universal_oracles.py  utils.py  vqe.py  workflow.py
app/lib/: ast_utils.py  qasm_string.py  transformer.py
app/migrations/: README.md  env.py
app/model/: CompileRequest.py  HelloWorld.py  ModelNode.py  SectionInfo.py  StatusBody.py  StatusResponse.py  __init__.py  block.py  compile_request.py  data_types.py  database_model.py  dataclass.py  exceptions.py  project.py  qasm_converter.py
app/music/: __init__.py  (+1 more)
demo/: OpenQASM_Import_flow-1782229187773.json  README.md  defense_demo.ipynb  hw_teleport_counts.json  hw_teleport_job.txt  modeler_teleport.py  requirements-demo.txt
docs/: .gitignore  app.lib.rst  app.postprocess.rst  conf.py  converter.rst  example-cross-references.rst  extract-openapi.py  index.md  index.rst  missing_gates.rst  missing_gates.txt  preprocessing.rst  requirements.txt
openqasm3_lexer/: __init__.py
scripts/: README.md  addition_insert.json  additon_insert.json  algo_playground.py  basis_addition_request.json  basis_signed_addition_request.json  broadcast_gate_h.json  broadcast_gate_ry.json  broadcast_gate_x.json  broadcast_impl_request.json  compile_request.json  concat_broadcast_test.json  encode_value_angle_array_float_request.json  encode_value_angle_array_request.json  encode_value_angle_request.json  encode_value_basis_array_request.json  encode_value_basis_list_request.json  encode_value_basis_negative_request.json  encode_value_basis_parameter_request.json  encode_value_basis_request.json  encode_value_basis_request_bitsize.json  encode_value_basis_request_measure_indices.json  encode_value_bool_request.json  enrich_operator_plus_request.json  extract_music_features.py  generate_qiskit_baselines.py  insert_helper.py  qaoa_host_side_poc.py  qaoa_host_side_poc_large.py  request_helper.py  simple_broadcast_test.json  test_dj.json  uncompute_ancilla_no_opt_request.json  uncompute_ancilla_request.json
tests/: AdditionTest.http  UniformSuperposition.http  conftest.py  converter_test.py  manual.http  qiskit_qpe_reference.py  spennylane_qpe_reference.py  test.http  test_amplitude_encoding.py  test_amplitude_fixed.py  test_compile.py  test_compile_request_parameters.py  test_converter.py  test_exceptions.py  test_qubit_node.py  test_schmidt_frontend_payload.py  test_utils.py
(+296 files in other folders)
